--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qtware-adapter-sdk",
-  "version": "0.0.2-rc.1",
+  "version": "0.0.2-rc.2",
   "description": "SDK for qtware wallet adapters derived and credit from salmon-adapter-sdk",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -31,14 +31,14 @@
   },
   "homepage": "https://github.com/miraland-labs/qtware-adapter-sdk#readme",
   "peerDependencies": {
-    "@solarti/web3.js": "^0.1.3"
+    "@solarti/web3.js": "^0.1.5-rc.1"
   },
   "dependencies": {
-    "@solarti/slrt-wallet-adapter": "^0.1.2",
+    "@solarti/slrt-wallet-adapter": "^0.1.3",
     "eventemitter3": "^4.0.7"
   },
   "devDependencies": {
-    "@solarti/web3.js": "^0.1.3",
+    "@solarti/web3.js": "^0.1.5-rc.1",
     "@types/node-fetch": "^2.6.2",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.7.4"
