--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qtware-adapter-sdk",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "SDK for qtware wallet adapters derived and credit from salmon-adapter-sdk",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -21,9 +21,16 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/miraland-labs/qtware-adapter-sdk.git"
+    "url": "https://github.com/miraland-labs/qtware-adapter-sdk"
   },
   "author": "",
+  "contributors": [
+    {
+      "name": "Miraland Crafters",
+      "email": "crafters@miraland.top",
+      "url": "https://miraland.top/"
+    }
+  ],
   "license": "Apache-2.0",
   "type": "module",
   "bugs": {
